# useful-skills

./: .gitignore
atlassian-cli/: CONTRIBUTING.md  LICENSE  README.md  SKILL.md  adf-reference.md  pyproject.toml
atlassian-cli-skill/: SKILL.md
atlassian-cli/src/atlassian_cli/: __init__.py  __main__.py  app.py  client.py  config.py  output.py
atlassian-cli/src/atlassian_cli/commands/: auth.py
atlassian-cli/src/atlassian_cli/commands/confluence/: __init__.py  blog.py  page.py  space.py
atlassian-cli/src/atlassian_cli/commands/jira/: __init__.py  board.py  comment.py  issue.py  link.py  project.py  sprint.py
atlassian-cli/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_confluence.py  test_issue_helpers.py  test_output.py
project-management-atlassian/: SKILL.md
project-management-atlassian/references/: advanced-jira-reference.md
